Implement slices and generators

--- a/matrix/CMakeLists.txt
+++ b/matrix/CMakeLists.txt
@@ -4,4 +4,4 @@ file(GLOB SOURCES "*.cpp")
 add_library(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC rowcolumn rowcolumnlist)
+target_link_libraries(${PROJECT_NAME} PUBLIC generator slice)
