--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,8 @@ project(matrixcalculator)
 set(CMAKE_CXX_FLAGS "-std=c++2a -Wall -Wpedantic -Wextra")
 add_executable(${PROJECT_NAME} main.cpp)
 
+add_subdirectory(generator)
 add_subdirectory(slice)
 add_subdirectory(matrix)
-add_subdirectory(rowcolumn)
-add_subdirectory(rowcolumnlist)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC slice matrix rowcolumn rowcolumnlist)
+target_link_libraries(${PROJECT_NAME} PUBLIC generator slice matrix)
