--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(generator)
 
-file(GLOB SOURCES "*.cpp")
+file(GLOB SOURCES *.cpp)
 add_library(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
