--- a/matrix/CMakeLists.txt
+++ b/matrix/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(matrix)
 
-file(GLOB SOURCES "*.cpp")
+file(GLOB SOURCES *.cpp)
 add_library(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
