--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(matrixcalculator)
+project(matrixcalc)
 
 set(CMAKE_CXX_FLAGS "-std=c++2a -Wall -Wpedantic -Wextra -fprofile-arcs -ftest-coverage -fPIC -O0")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage -lgcov" )
+set(CMAKE_EXE_LINKER_FLAGS "--coverage -lgcov")
 add_executable(${PROJECT_NAME} main.cpp)
 
 add_subdirectory(generator)
