--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(matrixcalc)
 
-set(CMAKE_CXX_FLAGS "-std=c++2a -Wall -Wpedantic -Wextra -fprofile-arcs -ftest-coverage -fPIC -O0")
+set(CMAKE_CXX_FLAGS "-std=c++2a -Wall -Wpedantic -Wextra -ftest-coverage -fPIC -O0")
 set(CMAKE_EXE_LINKER_FLAGS "--coverage -lgcov")
 add_executable(${PROJECT_NAME} main.cpp)
 
