--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "master" , "dev" ]
   
   pull_request:
-    branches: [ "master", "dev"]
+    branches: [ "master", "dev" ]
 
 jobs:
   build:
@@ -15,6 +15,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: make build
+      
+        - name: upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact_build
+          path: build/
 
   unit_tests:
     runs-on: ubuntu-latest
@@ -23,4 +29,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: run tests
         run: make test
-        
+
+      - name: upload test artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact_test
+          path: build/
