--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: artifact_build
-          path: build/
+          path: build
 
   unit_tests:
     runs-on: ubuntu-latest
