--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,11 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches: [ "master" , "dev" ]
-  
-  pull_request:
-    branches: [ "master", "dev" ]
+on: [push]
 
 jobs:
   build:
